--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<html>
 
-<body>
-  <h1>Jacob and Saskia are getting married!</h1>
-  <p>Welcome to our website!</p>
-  <img src="https://media1.tenor.com/m/3W23pfxaRwMAAAAd/duck-peas.gif" />
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>Saskia and Jacob are getting married!</h1>
+    <h2>Wedding Date & Venue</h2>
+    <h2>Schedule of Events</h2>
+    <h2>RSVP Information</h2>
+    <h3>How to RSVP</h3>
+    <h3>Deadline for RSVPs</h3>
+    <h2>Wedding Party</h2>
+    <h2>Travel & Accommodation</h2>
+    <h2>Dress Code</h2>
+    <h2>Photo Gallery</h2>
+    <h2>Gift Registry</h2>
+    <h2>Frequently Asked Questions</h2>
+    <h2>Contact Information</h2>
+  </body>
 </html>
+
