--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Saskia and Jacob are getting married!</h1>
-    <h2>Wedding Date & Venue</h2>
-    <h2>Schedule of Events</h2>
-    <h2>RSVP Information</h2>
-    <h3>How to RSVP</h3>
-    <h3>Deadline for RSVPs</h3>
-    <h2>Wedding Party</h2>
-    <h2>Travel & Accommodation</h2>
-    <h2>Dress Code</h2>
-    <h2>Photo Gallery</h2>
-    <h2>Gift Registry</h2>
-    <h2>Frequently Asked Questions</h2>
-    <h2>Contact Information</h2>
+    <div class = "container">
+      <h1>Saskia and Jacob are getting married!</h1>
+      <h2>Date & Venue</h2>
+      <h2>RSVP</h2>
+      <h3>How to RSVP</h3>
+      <h3>DRSVP Deadline</h3>
+      <h2>Schedule</h2>
+      <h2>Travel & Accommodation</h2>
+      <h2>Dress Code</h2>
+      <h2>Photo Gallery</h2>
+      <h2>Gift Registry</h2>
+      <h2>Wedding Team</h2>
+      <h2>Frequently Asked Questions</h2> 
+      <h2>Contact Information</h2>
+    </div>
   </body>
 </html>
 
