--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <body>
     <div class = "container">
       <h1>Saskia and Jacob are getting married!</h1>
-      <h2>Date & Venue</h2>
-      <h2>RSVP</h2>
+      <h2>Date & Venue</h2> <div class="bar"></div>
+      <h2>RSVP</h2> <div class="bar"></div>
       <h3>How to RSVP</h3>
-      <h3>DRSVP Deadline</h3>
-      <h2>Schedule</h2>
-      <h2>Travel & Accommodation</h2>
-      <h2>Dress Code</h2>
-      <h2>Photo Gallery</h2>
-      <h2>Gift Registry</h2>
-      <h2>Wedding Team</h2>
+      <h3>RSVP Deadline</h3>
+      <h2>Schedule</h2><div class="bar"></div>
+      <h2>Travel & Accommodation</h2><div class="bar"></div>
+      <h2>Dress Code</h2><div class="bar"></div>
+      <h2>Photo Gallery</h2> <div class="bar"></div>
+      <h2>Gift Registry</h2> <div class="bar"></div>
+      <h2>Wedding Team</h2> <div class="bar"></div>
       <h2>Frequently Asked Questions</h2> 
       <h2>Contact Information</h2>
     </div>
