added JS so clicking headers makes content appear/disappear

--- a/index.html
+++ b/index.html
@@ -4,22 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="coffeemakesmemove.js" defer></script>
   </head>
   <body>
     <div class = "container">
+
       <h1>Saskia and Jacob are getting married!</h1>
-      <h2>Date & Venue</h2> <div class="bar"></div>
-      <h2>RSVP</h2> <div class="bar"></div>
+
+      <h2 class="toggle" class="header">Date & Venue</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      <h2 class="toggle">RSVP
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </h2>
       <h3>How to RSVP</h3>
       <h3>RSVP Deadline</h3>
-      <h2>Schedule</h2><div class="bar"></div>
-      <h2>Travel & Accommodation</h2><div class="bar"></div>
-      <h2>Dress Code</h2><div class="bar"></div>
-      <h2>Photo Gallery</h2> <div class="bar"></div>
-      <h2>Gift Registry</h2> <div class="bar"></div>
-      <h2>Wedding Team</h2> <div class="bar"></div>
-      <h2>Frequently Asked Questions</h2> 
-      <h2>Contact Information</h2>
+      <h2 class="toggle">Schedule</h2><div class="bar"></div>
+      <h2 class="toggle">Travel & Accommodation</h2><div class="bar"></div>
+      <h2 class="toggle">Dress Code</h2><div class="bar"></div>
+      <h2 class="toggle">Photo Gallery</h2> <div class="bar"></div>
+      <h2 class="toggle">Gift Registry</h2> <div class="bar"></div>
+      <h2 class="toggle">Wedding Team</h2> <div class="bar"></div>
+      <h2 class="toggle">Frequently Asked Questions</h2> 
+      <h2 class="toggle">Contact Information</h2>
     </div>
   </body>
 </html>
