--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <div class = "container">
 
       <h1>Saskia and Jacob are getting married!</h1>
-
-      <h2 class="toggle" class="header">Date & Venue</h2> 
+      
+      <div class=" section">
+      <h2 class="header">Date & Venue</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
           <p>content here hello</p>
         </div>
+      </div>
+
       <h2 class="toggle">RSVP
         <div class="bar"></div>
         <div class = 'toggles'>     
