Applied collapse functionality to all headings

--- a/index.html
+++ b/index.html
@@ -8,33 +8,90 @@
   </head>
   <body>
     <div class = "container">
-
       <h1>Saskia and Jacob are getting married!</h1>
       
       <div class=" section">
-      <h2 class="header">Date & Venue</h2> 
+        <h2 class="header">Date & Venue</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
           <p>content here hello</p>
         </div>
       </div>
 
-      <h2 class="toggle">RSVP
+      <div class=" section">
+        <h2 class="header">RSVP</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
           <p>content here hello</p>
         </div>
-      </h2>
+      </div>
+
       <h3>How to RSVP</h3>
       <h3>RSVP Deadline</h3>
-      <h2 class="toggle">Schedule</h2><div class="bar"></div>
-      <h2 class="toggle">Travel & Accommodation</h2><div class="bar"></div>
-      <h2 class="toggle">Dress Code</h2><div class="bar"></div>
-      <h2 class="toggle">Photo Gallery</h2> <div class="bar"></div>
-      <h2 class="toggle">Gift Registry</h2> <div class="bar"></div>
-      <h2 class="toggle">Wedding Team</h2> <div class="bar"></div>
-      <h2 class="toggle">Frequently Asked Questions</h2> 
-      <h2 class="toggle">Contact Information</h2>
+
+      <div class=" section">
+        <h2 class="header">Schedule</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Travel and Accomodation</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Dress Code</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Photo Gallery</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Gift Registry</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Wedding Team</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">FAQ</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+
+      <div class=" section">
+        <h2 class="header">Contact Information</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
