Added photos and carrousel functionality

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         <h2 class="header">Photo Gallery</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
-          <p>content here hello</p>
+          <div id="gallery">
+            <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
+            <button onclick="prevImg()"> << </button>
+            <button onclick="nextImg()">>></button>
+          </div>
+
         </div>
       </div>
 
