--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
         <div class="bar"></div>
         <div class = 'toggles'>     
           <div id="gallery">
-            <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
-            <button onclick="prevImg()"> << </button>
-            <button onclick="nextImg()">>></button>
+            <div id = gallery_image_container> 
+              <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
+            </div>
+            <div id =gallery_button_container>
+              <button onclick="prevImg()"> << </button>
+              <button onclick="nextImg()">>></button>
+            </div>
           </div>
 
         </div>
