--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
         <div class = 'toggles'>     
           <div id="gallery">
             <div id = gallery_image_container> 
+              <button class = "left" onclick="prevImg()"> << </button>
               <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
-            </div>
-            <div id =gallery_button_container>
-              <button onclick="prevImg()"> << </button>
-              <button onclick="nextImg()">>></button>
+              <button class = "right" onclick="nextImg()">>></button>
             </div>
           </div>
 
