Set to auto rotate

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class = 'toggles'>     
           <div id="gallery">
             <div id = gallery_image_container> 
-              <button class = "left" onclick="prevImg()"> < </button>
+              <button class = "left" onclick="prevImg() ; gallery_pause()"> < </button>
               <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
-              <button class = "right" onclick="nextImg()">></button>
+              <button class = "right" onclick="nextImg() ; gallery_pause()">></button>
             </div>
           </div>
 
