Centred gallery with justify-items in toggles

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <div class="bar"></div>
         <div class = 'toggles'>     
           <div id="gallery">
-            <div id = gallery_image_container> 
-              <button class = "left" onclick="prevImg() ; gallery_pause()"> < </button>
+            <button class = "left" onclick="prevImg() ; gallery_pause()"> < </button>
+            <div id = "gallery_image_container"> 
               <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
-              <button class = "right" onclick="nextImg() ; gallery_pause()">></button>
             </div>
+            <button class = "right" onclick="nextImg() ; gallery_pause()">></button>
           </div>
 
         </div>
