--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="bar"></div>
         <div class = 'toggles'>     
           <div id="gallery">
-            <button class = "left" onclick="updateImage('previous'); gallery_pause()"> < </button>
+            <button class = "left" onclick="updateImage('prev'); gallery_pause()"> < </button>
             <div id = "gallery_image_container"> 
               <img id="gallery_image" src = "assets\\adfc99df-c877-4a71-9c7e-9c7c9e469387.jpg">
             </div>
