OK so now all three are next to each other, but in the div let us hide them now

--- a/index.html
+++ b/index.html
@@ -65,14 +65,16 @@
         <div class = 'toggles'>     
           <div class="gallery">
             <button class = "left" onclick="updateImage('prev')"> < </button>
-            <div id = "gallery_image_container_prev"> 
-              <img id="gallery_image_prev">
-            </div>
-            <div id = "gallery_image_container"> 
-              <img id="gallery_image">
-            </div>
-            <div id = "gallery_image_container_next"> 
-              <img id="gallery_image_next">
+            <div class = gallery-images> 
+              <div id = "gallery_image_container_prev"> 
+                <img id="gallery_image_prev">
+              </div>
+              <div id = "gallery_image_container"> 
+                <img id="gallery_image">
+              </div>
+              <div id = "gallery_image_container_next"> 
+                <img id="gallery_image_next">
+              </div>
             </div>
             <button class = "right" onclick="updateImage('next')">></button>
           </div>
