--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" href="styles.css">
     <script src="coffeemakesmemove.js" defer></script>
 
-    <!-- Lightbox CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-    <!-- Lightbox JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-
   </head>
   <body>
     <div class = "container">
@@ -39,7 +34,9 @@
         <h2 class="header">Schedule</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
-          <p>content here hello</p>
+          <a href="./page2.html">
+            <button>Go to Another Page</button>
+        </a>
         </div>
       </div>
 
