added basic logic for a subpage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2 class="header">Schedule</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
-          <a href="./page2.html">
+          <a href="./subpages/photo_gallery.html">
             <button>Go to Another Page</button>
         </a>
         </div>
@@ -57,7 +57,7 @@
       </div>
 
       <div class=" section">
-        <h2 class="header">Photo Gallery</h2> 
+        <h2 class="header" >Photo Gallery</h2> 
         <div class="bar"></div>
         <div class = 'toggles'>     
           <div class="gallery">
