--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   </head>
   <body>
+    <div class="navbar">
+      <a href="#" onclick="do_stuff('section1')">Section 1</a>
+      <a href="#" onclick="do_stuff('section2')">Section 2</a>
+    </div>
+
     <div class = "container">
       <h1>Saskia and Jacob are getting married!</h1>
       
