--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#" onclick="do_stuff('section1')">Section 1</a>
-      <a href="#" onclick="do_stuff('section2')">Section 2</a>
+      <a class =navbutton>Section 1</a>
+      <a class =navbutton>Section 2</a>
+    </div>
+
+    <div id="test-content">
+
     </div>
 
     <div class = "container">
