--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <div class="navbar">
-      <a class =navbutton>Section 1</a>
+      <a class =navbutton onclick="updateImage('init')">Section 1</a>
       <a class =navbutton>Section 2</a>
     </div>
 
     <div id="test-content">
-
     </div>
 
     <div class = "container">
