fixed initial load issue - added call to update_photo(init)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a class =navbutton onclick="updateImage('init')">Section 1</a>
+      <a class =navbutton>Section 1</a>
       <a class =navbutton>Section 2</a>
     </div>
 
