Fixed so button one is photos correctly now

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="navbar">
-      <a class =navbutton>Section 1</a>
-      <a class =navbutton>Section 2</a>
+      <button id ='photo-gallery'>Photos</button>
+      <button id ='other'>Other Page</button>
     </div>
 
     <div id="test-content">
