Added buttons and subpages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <div class="navbar">
+      <button id ='rsvp'>RSVP</button>
+      <button id ='details'>Information</button>
       <button id ='photo-gallery'>Photos</button>
-      <button id ='other'>Other Page</button>
+      <button id ='logistics'>Travel & Accomodation</button>
+      <button id ='team'>Wedding Team</button>
+      <button id ='gifts'>Gifts</button>
+      <button id ='contact'>Contact Details</button>
     </div>
 
     <div id="test-content">
