moved html to subpages - not tied up yet

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id ='logistics'>Travel & Accomodation</button>
       <button id ='team'>Wedding Team</button>
       <button id ='gifts'>Gifts</button>
+      <button id ='faq'>Dress Code & FAQ</button>
       <button id ='contact'>Contact Details</button>
     </div>
 
@@ -24,105 +25,7 @@
     <div class = "container">
       <h1>Saskia and Jacob are getting married!</h1>
       
-      <div class=" section">
-        <h2 class="header">Date & Venue</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">RSVP</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <h3>How to RSVP</h3>
-      <h3>RSVP Deadline</h3>
-
-      <div class=" section">
-        <h2 class="header">Schedule</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <a href="./subpages/photo_gallery.html">
-            <button>Go to Another Page</button>
-        </a>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">Travel and Accomodation</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">Dress Code</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header" >Photo Gallery</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <div class="gallery">
-            <button class = "left" onclick="updateImage('prev')"> < </button>
-            <div class = gallery-images> 
-              <div id = "gallery_image_container_prev"> 
-                <img id="gallery_image_prev">
-              </div>
-              <div id = "gallery_image_container"> 
-                <img id="gallery_image">
-              </div>
-              <div id = "gallery_image_container_next"> 
-                <img id="gallery_image_next">
-              </div>
-            </div>
-            <button class = "right" onclick="updateImage('next')">></button>
-          </div>
-
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">Gift Registry</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">Wedding Team</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">FAQ</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
-
-      <div class=" section">
-        <h2 class="header">Contact Information</h2> 
-        <div class="bar"></div>
-        <div class = 'toggles'>     
-          <p>content here hello</p>
-        </div>
-      </div>
+     
     </div>
   </body>
 </html>
