--- a/subpages/contact.html
+++ b/subpages/contact.html
@@ -4,4 +4,11 @@
   </head>
 <body>
 
+  <div class=" section">
+    <h2 class="header">Contact Information</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
 </body>
