--- a/subpages/faq.html
+++ b/subpages/faq.html
@@ -4,10 +4,19 @@
   </head>
 <body>
   <div class=" section">
-    <h2 class="header">Wedding Team</h2> 
+    <h2 class="header">Dress Code</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
     </div>
   </div>
+
+  <div class=" section">
+    <h2 class="header">FAQ</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+  
 </body>
