--- a/subpages/gifts.html
+++ b/subpages/gifts.html
@@ -3,5 +3,11 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
 <body>
-
+  <div class=" section">
+    <h2 class="header">Gift Registry</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
 </body>
