--- a/subpages/information.html
+++ b/subpages/information.html
@@ -4,4 +4,21 @@
   </head>
 <body>
 
+  <div class=" section">
+    <h2 class="header">Date & Venue</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+  <div class=" section">
+    <h2 class="header">Schedule</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <a href="./subpages/photo_gallery.html">
+        <button>Go to Another Page</button>
+    </a>
+    </div>
+  </div>
+
 </body>
