tied up buttons - but not working, need to rejig html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="navbar">
       <button id ='rsvp'>RSVP</button>
-      <button id ='details'>Information</button>
+      <button id ='info'>Information</button>
       <button id ='photo-gallery'>Photos</button>
       <button id ='logistics'>Travel & Accomodation</button>
       <button id ='team'>Wedding Team</button>
