moved everything to the container

--- a/index.html
+++ b/index.html
@@ -18,15 +18,8 @@
       <button id ='faq'>Dress Code & FAQ</button>
       <button id ='contact'>Contact Details</button>
     </div>
-
-    <div id="test-content">
-    </div>
-
-    <div class = "container">
-      <h1>Saskia and Jacob are getting married!</h1>
-      
-     
-    </div>
+    <h1>Saskia and Jacob are getting married!</h1>
+    <div id = "container"></div>
   </body>
 </html>
 
