made landing page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="coffeemakesmemove.js" defer></script>
-
   </head>
   <body>
     <div class="navbar">
+      <button id ='home'>Home</button>
       <button id ='rsvp'>RSVP</button>
       <button id ='info'>Information</button>
       <button id ='photo-gallery'>Photos</button>
@@ -18,8 +18,9 @@
       <button id ='faq'>Dress Code & FAQ</button>
       <button id ='contact'>Contact Details</button>
     </div>
-    <h1>Saskia and Jacob are getting married!</h1>
-    <div id = "container"></div>
+    <div id = "container">
+      <h1>Saskia and Jacob are getting married!</h1>
+    </div>
   </body>
 </html>
 
