reduce number of buttons

--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
   </head>
   <body>
     <div class="navbar">
-      <button id ='home'>Home</button>
       <button id ='rsvp'>RSVP</button>
-      <button id ='info'>Information</button>
+      <button id ='info'>Key Information</button>
       <button id ='photo-gallery'>Photos</button>
-      <button id ='logistics'>Travel & Accomodation</button>
-      <button id ='team'>Wedding Team</button>
-      <button id ='gifts'>Gifts</button>
-      <button id ='faq'>Dress Code & FAQ</button>
-      <button id ='contact'>Contact Details</button>
+      <button id ='faq'>More Details</button>
     </div>
     <div id = "container">
       <h1>Saskia and Jacob are getting married!</h1>
