--- a/subpages/faq.html
+++ b/subpages/faq.html
@@ -12,6 +12,22 @@
   </div>
 
   <div class=" section">
+    <h2 class="header">Gift Registry</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  <div class=" section">
+    <h2 class="header">Wedding Team</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  <div class=" section">
     <h2 class="header">FAQ</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
