--- a/subpages/information.html
+++ b/subpages/information.html
@@ -11,6 +11,7 @@
       <p>content here hello</p>
     </div>
   </div>
+
   <div class=" section">
     <h2 class="header">Schedule</h2> 
     <div class="bar"></div>
@@ -21,4 +22,21 @@
     </div>
   </div>
 
+  <div class=" section">
+    <h2 class="header">Travel and Accomodation</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  
+  <div class=" section">
+    <h2 class="header">Contact Information</h2> 
+    <div class="bar"></div>
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+  
 </body>
