disaster fuck this

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div class="navbar">
-      <button id ='rsvp'>RSVP</button>
-      <button id ='info'>Key Information</button>
-      <button id ='photo-gallery'>Photos</button>
-      <button id ='faq'>More Details</button>
+      <div class ="navbuttons">
+        <button id ='rsvp'>RSVP</button>
+        <button id ='info'>Key Information</button>
+        <button id ='photo-gallery'>Photos</button>
+        <button id ='faq'>More Details</button>
+      </div>
     </div>
     <div id = "container">
       <h1>Saskia and Jacob are getting married!</h1>
