Revert "disaster fuck this"
This reverts commit a5434dd64c4da8b3adb299ba41b05207ae2bbf30.

--- a/subpages/photo_gallery.html
+++ b/subpages/photo_gallery.html
@@ -3,6 +3,7 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
 <body>
+  <div class = "container">
         <div class="gallery">
           <button class = "left" onclick="updateImage('prev')"> < </button>
           <div class = gallery-images> 
@@ -17,5 +18,6 @@
             </div>
           </div>
           <button class = "right" onclick="updateImage('next')">></button>
+        </div>
   </div> 
 </body>
