--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
   <body>
-    <div class="navbar">
-      <button id ='rsvp'>RSVP</button>
-      <button id ='info'>Key Information</button>
-      <button id ='photo-gallery'>Photos</button>
-      <button id ='faq'>More Details</button>
+    <div class = 'header'>
+      <div class="navbar">
+        <button id ='rsvp'>RSVP</button>
+        <button id ='info'>Key Information</button>
+        <button id ='photo-gallery'>Photos</button>
+        <button id ='faq'>More Details</button>
+      </div>
     </div>
     <div id = "container">
       <h1>Saskia and Jacob are getting married!</h1>
