Not sure if this works but will try pushing to test on mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
   <body>
-    <div class = 'header'>
+    <div class = 'header' class ='hide-on-mobile'>
       <div class="navbar">
         <button id ='rsvp'>RSVP</button>
         <button id ='info'>Key Information</button>
