scrolly photo works

--- a/subpages/information.html
+++ b/subpages/information.html
@@ -8,7 +8,10 @@
     <h2 class="header">Date & Venue</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
-      <p>content here hello</p>
+      <p>content here hello
+
+
+      </p>
     </div>
   </div>
 
