--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
       </div>
     </div>
     <div id = "container">
-      <h1>Saskia and Jacob are getting married!</h1>
+      <h1 class="hero">Saskia and Jacob are getting married!</h1>
+
+      <div class=" section">
+        <h2 class="header">Dress Code</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+    
+      <div class=" section">
+        <h2 class="header">Gift Registry</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
+    
+      <div class=" section">
+        <h2 class="header">Wedding Team</h2> 
+        <div class="bar"></div>
+        <div class = 'toggles'>     
+          <p>content here hello</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
