Applied hero to all pages

--- a/subpages/faq.html
+++ b/subpages/faq.html
@@ -3,6 +3,7 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
 <body>
+  <h1 class="hero">Saskia and Jacob are getting married!</h1>
   <div class=" section">
     <h2 class="header">Dress Code</h2> 
     <div class="bar"></div>
