--- a/subpages/information.html
+++ b/subpages/information.html
@@ -3,6 +3,8 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
 <body>
+  
+  <h1 class="hero">Saskia and Jacob are getting married!</h1>
 
   <div class=" section">
     <h2 class="header">Date & Venue</h2> 
