--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit = cover">
+    
     <link rel="stylesheet" href="styles.css">
     <script src="coffeemakesmemove.js" defer></script>
   </head>
@@ -16,7 +17,7 @@
       </div>
     </div>
     <div id = "container">
-    <h1 class="hero">Saskia and Jacob are getting married!</h1>
+    <div class="hero"></div>
     </div>
   </body>
 </html>
