--- a/subpages/information.html
+++ b/subpages/information.html
@@ -4,7 +4,7 @@
   </head>
 <body>
   
-  <h1 class="hero">Saskia and Jacob are getting married!</h1>
+  <div class="hero"></div>
 
   <div class=" section">
     <h2 class="header">Date & Venue</h2> 
