--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class = 'header hide-on-mobile'>
       <div class="navbar">
         <button id ='rsvp'>RSVP</button>
-        <button id ='info'>Key Information</button>
+        <button id ='info'>Info</button>
         <button id ='photo-gallery'>Photos</button>
-        <button id ='faq'>More Details</button>
+        <button id ='faq'>More!</button>
       </div>
     </div>
     <div id = "container">
