make header disappear on landscape mobile, not navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     
     <div class="hero"></div>
-    <div class = 'header hide-on-mobile'>
+    <div class = 'header'>
       <div class="navbar">
         <button id ='rsvp'>RSVP</button>
         <button id ='info'>Info</button>
