fixed heading issue - classname header doing double duty

--- a/subpages/faq.html
+++ b/subpages/faq.html
@@ -4,7 +4,7 @@
   </head>
 <body>
   <div class=" section">
-    <h2 class="header">Dress Code</h2> 
+    <h2 class="heading">Dress Code</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
@@ -12,7 +12,7 @@
   </div>
 
   <div class=" section">
-    <h2 class="header">Gift Registry</h2> 
+    <h2 class="heading">Gift Registry</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
@@ -20,7 +20,7 @@
   </div>
 
   <div class=" section">
-    <h2 class="header">Wedding Team</h2> 
+    <h2 class="heading">Wedding Team</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
@@ -28,7 +28,7 @@
   </div>
 
   <div class=" section">
-    <h2 class="header">FAQ</h2> 
+    <h2 class="heading">FAQ</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
