--- a/subpages/information.html
+++ b/subpages/information.html
@@ -4,7 +4,7 @@
   </head>
 <body>
   <div class=" section">
-    <h2 class="header">Date & Venue</h2> 
+    <h2 class="heading">Date & Venue</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello
@@ -15,7 +15,7 @@
   </div>
 
   <div class=" section">
-    <h2 class="header">Schedule</h2> 
+    <h2 class="heading">Schedule</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <a href="./subpages/photo_gallery.html">
@@ -25,7 +25,7 @@
   </div>
 
   <div class=" section">
-    <h2 class="header">Travel and Accomodation</h2> 
+    <h2 class="heading">Travel and Accomodation</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
@@ -34,7 +34,7 @@
 
   
   <div class=" section">
-    <h2 class="header">Contact Information</h2> 
+    <h2 class="heading">Contact Information</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
