--- a/subpages/rsvp.html
+++ b/subpages/rsvp.html
@@ -4,7 +4,7 @@
   </head>
 <body>
   <div class=" section">
-    <h2 class="header">RSVP</h2> 
+    <h2 class="heading">RSVP</h2> 
     <div class="bar"></div>
     <div class = 'toggles'>     
       <p>content here hello</p>
