--- a/subpages/information.html
+++ b/subpages/information.html
@@ -1,4 +1,3 @@
-
   <div class=" section">
     <h2 class="heading">Date & Venue</h2> 
     <div class = 'toggles'>     
@@ -26,6 +25,34 @@
   </div>
 
   
+  <div class=" section">
+    <h2 class="heading">Dress Code</h2> 
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  <div class=" section">
+    <h2 class="heading">Gift Registry</h2> 
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  <div class=" section">
+    <h2 class="heading">Wedding Team</h2> 
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
+  <div class=" section">
+    <h2 class="heading">FAQ</h2> 
+    <div class = 'toggles'>     
+      <p>content here hello</p>
+    </div>
+  </div>
+
   <div class=" section">
     <h2 class="heading">Contact Information</h2> 
     <div class = 'toggles'>     
