Added some content, removed h1 and h3 guff styling

--- a/subpages/information.html
+++ b/subpages/information.html
@@ -1,26 +1,80 @@
   <div class=" section">
     <h2 class="heading">Date & Venue</h2> 
     <div class = 'toggles'>     
-      <p>content here hello
-
-
+      <p>
+        Saturday 23rd August 2025
       </p>
+
+      <p>
+        White Skye Fields
+        Sand Hutton
+        York 
+        YO41 1LN
+      </p>
+
+      <a href="https://www.whitesykefields.co.uk/" target="_blank" rel="noopener noreferrer">
+        Click here for the venue website
+    </a>
     </div>
   </div>
 
   <div class=" section">
     <h2 class="heading">Schedule</h2> 
     <div class = 'toggles'>     
-      <a href="./subpages/photo_gallery.html">
-        <button>Go to Another Page</button>
-    </a>
+      <p> This schedule is provisional, but the arrival and departure times are final</p>
+      <div class="schedule-container">
+        <ul class="schedule-list">
+            <li class="schedule-item">
+                <span class="time">12:30</span>
+                <span class="event">Doors open</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">14:00</span>
+                <span class="event">Ceremony starts</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">14:45</span>
+                <span class="event">Photos</span>
+            </li>
+            <li class="schedule-item spacer"></li>
+            <li class="schedule-item">
+                <span class="time">16:00</span>
+                <span class="event">Cocktails</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">17:00</span>
+                <span class="event">Dinner starts</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">18:30</span>
+                <span class="event">Speeches</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">19:00</span>
+                <span class="event">Dessert</span>
+            </li>
+            <li class="schedule-item">
+                <span class="time">19:45</span>
+                <span class="event">Dancing starts</span>
+            </li>
+            <li class="schedule-item spacer"></li>
+            <li class="schedule-item">
+                <span class="time">11:45</span>
+                <span class="event">Carriages</span>
+            </li>
+        </ul>
+    </div>
     </div>
   </div>
 
   <div class=" section">
     <h2 class="heading">Travel and Accomodation</h2> 
     <div class = 'toggles'>     
-      <p>content here hello</p>
+      <p>Car: Free parking available at venue</p>
+
+      <p>Train: Nearest station is York. It is a 20 minute taxi from the station to the venue</p>
+      <p>Local Taxis: York Cars (01904 765 765), Fleetway Taxis (01904 365 365), Streamline Taxis (01904 656 565), Minibus Hire York (01904 270 083) </p>
+  
     </div>
   </div>
 
