--- a/subpages/rsvp.html
+++ b/subpages/rsvp.html
@@ -6,7 +6,9 @@
   <div class=" section">
     <h2 class="heading">RSVP</h2> 
     <div class = 'toggles'>     
-      <p>content here hello</p>
+      <p>Please fill in the form below to let us know if you can make it! If you’re not able to confirm until a bit later, send us an email on saskia@baylishome.com</p> 
+        
+      <a href = 'https://www.google.com.mx/' target="_blank"> Form Link</a>
     </div>
   </div>
 </body>
