added double click to stop auto opening

--- a/subpages/rsvp.html
+++ b/subpages/rsvp.html
@@ -5,10 +5,8 @@
 <body>
   <div class=" section">
     <h2 class="heading">RSVP</h2> 
-    <div class = 'toggles'>     
-      <p>Please fill in the form below to let us know if you can make it! If you’re not able to confirm until a bit later, send us an email on saskia@baylishome.com</p> 
+      <p>Please fill in the form below to let us know if you can make it! If you're not able to confirm until a bit later, send us an email on saskia@baylishome.com</p> 
         
       <a href = 'https://www.google.com.mx/' target="_blank"> Form Link</a>
-    </div>
   </div>
 </body>
