--- a/subpages/rsvp.html
+++ b/subpages/rsvp.html
@@ -5,8 +5,14 @@
 <body>
   <div class=" section">
     <h2 class="heading">RSVP</h2> 
-      <p>Please fill in the form below to let us know if you can make it! If you're not able to confirm until a bit later, send us an email on saskia@baylishome.com</p> 
-        
-      <a href = 'https://www.google.com.mx/' target="_blank"> Form Link</a>
+    
+    <div class="content-text">
+      <p>Please fill in the form below to let us know if you can make it! </p>
+      <p> If you would like bring a plus-one, let us know via the form</p>  
+      <p> We're happy for people to bring babies or young children</p>
+      <a href = 'https://forms.gle/GgxqArpkkmaeXw2Y8' target="_blank"> Form Link</a>
+      <p></p>
+      <p>If you're not able to confirm until a bit later, send us an email on saskia@baylishome.com</p> 
+      </div>
   </div>
 </body>
