remove registry word

--- a/subpages/information.html
+++ b/subpages/information.html
@@ -108,7 +108,7 @@
 </div>
 
 <div class="section">
-  <h2 class="heading">Gift Registry</h2>
+  <h2 class="heading">Gifts</h2>
   <div class="toggles">
       <div class="content-text">
            <p> We're so happy that you're heading to Yorkshire for our wedding. We know that hotels and travel on a bank holiday aren't cheap, so we're really happy to consider your presence at our wedding as your gift. </p> 
