--- a/subpages/information.html
+++ b/subpages/information.html
@@ -78,10 +78,10 @@
           <p><strong>Train:</strong> Nearest station is York. It is a 30-minute taxi from the station to the venue.</p>
           <p><strong>Local Taxis:</strong></p>
           <ul class="taxi-list">
-              <li>York Cars: <a href="tel:01904765765">01904 765 765</a></li>
-              <li>Fleetway Taxis: <a href="tel:01904365365">01904 365 365</a></li>
-              <li>Streamline Taxis: <a href="tel:01904656565">01904 656 565</a></li>
-              <li>Minibus Hire York: <a href="tel:01904270083">01904 270 083</a></li>
+              <li>York Cars: <a href="tel:01904765765" target="_blank" rel="noopener noreferrer">01904 765 765</a></li>
+              <li>Fleetway Taxis: <a href="tel:01904365365" target="_blank" rel="noopener noreferrer">01904 365 365</a></li>
+              <li>Streamline Taxis: <a href="tel:01904656565" target="_blank" rel="noopener noreferrer">01904 656 565</a></li>
+              <li>Minibus Hire York: <a href="tel:01904270083"target="_blank" rel="noopener noreferrer">01904 270 083</a></li>
           </ul>
           <p><strong>Accommodation:</strong>Due to the bank holiday, options like Travelodge have raised their prices. However, there are plenty of smaller hotels, bed and breakfasts and airbnbs available. We recommend you book as soon as possible as they're filling up fast.
             Some options below:</p>
@@ -91,8 +91,8 @@
                 <li><a href="https://www.booking.com/hotel/gb/york-rose-b-amp-b.en-gb.html?aid=356980&label=gog235jc-1FCAMoUEILc2FuZC1odXR0b25ICVgDaFCIAQGYAQm4AQfIAQzYAQHoAQH4AQKIAgGoAgO4AuXgr7wGwAIB0gIkODNkODBjN2QtOTQ4OS00Y2E3LTkzYTYtMDI4MGVlYzc3YWE12AIF4AIB&sid=718851496e005a2509286bc80c657b9c&all_sr_blocks=472407304_147745869_2_1_0&checkin=2025-08-23&checkout=2025-08-24&dest_id=-2607069&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=3&highlighted_blocks=472407304_147745869_2_1_0&hpos=3&matching_block_id=472407304_147745869_2_1_0&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&sr_pri_blocks=472407304_147745869_2_1_0__9000&srepoch=1737224309&srpvid=45d980b8ff780539&type=total&ucfs=1&" target="_blank" rel="noopener noreferrer">York Rose B&B</a></li>
                 <li><a href="https://www.airbnb.co.uk/s/Sand-Hutton--United-Kingdom/homes?refinement_paths%5B%5D=%2Fhomes&flexible_trip_lengths%5B%5D=one_week&monthly_start_date=2025-02-01&monthly_length=3&monthly_end_date=2025-05-01&price_filter_input_type=0&channel=EXPLORE&query=Sand%20Hutton&place_id=ChIJZ6o_i4YreUgRNRfdzPenIfM&date_picker_type=calendar&checkin=2025-08-23&checkout=2025-08-24&adults=2&source=structured_search_input_header&search_type=user_map_move&search_mode=regular_search&price_filter_num_nights=1&ne_lat=54.084186438254456&ne_lng=-0.8864572050720767&sw_lat=53.971373039248974&sw_lng=-1.0309866491035677&zoom=11.820606689844833&zoom_level=11.820606689844833&search_by_map=true" target="_blank" rel="noopener noreferrer">Airbnb Listings</a></li>
                 <li><a href="https://www.sandburnhall.co.uk/" target="_blank" rel="noopener noreferrer">Sandburn Hall</a></li>
-                <li><a href = 'https://www.bellavistacamping.co.uk/'> Bella Vista Glamping Ibis York Centre</a></li>
-                <li><a href = https://all.accor.com/hotel/6390/index.en.shtml>IBIS York Centre</a></li>
+                <li><a href = 'https://www.bellavistacamping.co.uk/' target="_blank" rel="noopener noreferrer"> Bella Vista Glamping Ibis York Centre</a></li>
+                <li><a href = 'https://all.accor.com/hotel/6390/index.en.shtml' target="_blank" rel="noopener noreferrer">IBIS York Centre</a></li>
             </ul>
         </div>
   </div>
@@ -113,7 +113,7 @@
       <div class="content-text">
            <p> We're so happy that you're heading to Yorkshire for our wedding. We know that hotels and travel on a bank holiday aren't cheap, so we're really happy to consider your presence at our wedding as your gift. </p> 
            <p>However, if you'd like to give us something extra - we're currently buying our first house! (Hopefully by the wedding we will be living there.) We'd really appreciate any donations you're able to give us towards buying things for the house and making it a lovely home. </p> 
-           <p>Please use <a href ='https://app.collectionpot.com/pot/jacobandsaskia'> this link</a> if you'd like to donate</p>
+           <p>Please use <a href ='https://app.collectionpot.com/pot/jacobandsaskia' target="_blank" rel="noopener noreferrer"> this link</a> if you'd like to donate</p>
       </div>
   </div>
 </div>
