Schedule changed, food warning, traffic warning

--- a/subpages/information.html
+++ b/subpages/information.html
@@ -22,7 +22,9 @@
   <h2 class="heading">Schedule</h2>
   <div class="toggles">
       <div class="content-text">
-          <p>This schedule is provisional, but the arrival and departure times are final.</p>
+          <p>This schedule is provisional, but the arrival and departure times are set.</p>
+          <p>The meal will be served after 17:00. Light bites will be available beforehand, but please do eat before arriving.</p>
+          <p><strong>Please note, given the bank holiday, we're expecting a lot of traffic. Please factor in plenty of contingency to your travel plans.</strong> </p>
           <div class="schedule-container">
               <ul class="schedule-list">
                   <li class="schedule-item">
@@ -36,11 +38,7 @@
                   </li>
                   <li class="schedule-item">
                       <span class="time">14:45</span>
-                      <span class="event">Photos</span>
-                  </li>
-                  <li class="schedule-item">
-                      <span class="time">16:00</span>
-                      <span class="event">Cocktails</span>
+                      <span class="event">Photos, games, nibbles</span>
                   </li>
                   <li class="schedule-item spacer"></li>
                   <li class="schedule-item">
@@ -74,6 +72,7 @@
   <h2 class="heading">Travel and Accommodation</h2>
   <div class="toggles">
       <div class="content-text">
+        <p><strong>Please note, given the bank holiday, we're expecting a lot of traffic. Please factor in plenty of contingency to your travel plans.</strong> </p>
           <p><strong>Car:</strong> Free parking available at the venue.</p>
           <p><strong>Train:</strong> Nearest station is York. It is a 30-minute taxi from the station to the venue.</p>
           <p><strong>Local Taxis:</strong></p>
