bunch of cosmetic changes, made header smaller and thinner?

--- a/subpages/photo_gallery.html
+++ b/subpages/photo_gallery.html
@@ -4,7 +4,7 @@
   </head>
 <body>
         <div class="gallery">
-          <button class = "left" onclick="updateImage('prev')"> < </button>
+          <button class = "left" onclick="updateImage('prev')"> <span style="color: green;">&#9664; </span> </button>
           <div class = gallery-images> 
             <div id = "gallery_image_container_prev"> 
               <img id="gallery_image_prev">
@@ -16,6 +16,6 @@
               <img id="gallery_image_next">
             </div>
           </div>
-          <button class = "right" onclick="updateImage('next')">></button>
+          <button class = "right" onclick="updateImage('next')"><span style="color: green;"> &#9654;</span></button>
         </div>
 </body>
