added max on mobile to max gallery when landscape

--- a/subpages/photo_gallery.html
+++ b/subpages/photo_gallery.html
@@ -3,7 +3,7 @@
     <script src="coffeemakesmemove.js" defer></script>
   </head>
 <body>
-        <div class="gallery">
+        <div class="gallery max-on-mobile">
           <button class = "left" onclick="updateImage('prev')"> <span style="color: green;">&#9664; </span> </button>
           <div class = gallery-images> 
             <div id = "gallery_image_container_prev"> 
