--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" href="styles.css">
     <script src="coffeemakesmemove.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>s
   </head>
   <body>
     
