--- a/subpages/information.html
+++ b/subpages/information.html
@@ -4,7 +4,7 @@
       <div class="content-text">
           <p>Saturday 23rd August 2025</p>
           <p>
-              White Skye Fields<br>
+              White Syke Fields<br>
               Sand Hutton<br>
               York<br>
               YO41 1LN
@@ -86,11 +86,12 @@
             Some options below:</p>
 
             <ul class="taxi-list">
+                <li><a href="https://www.universityrooms.com/en-GB/city/york/home/?gad_source=1&gclid=Cj0KCQiAlbW-BhCMARIsADnwasrmpC7wRmMlfqn_0QlUtMfCK3sTEu6FhKUfzM2p3qSzTpV8_p-MOK8aAn4CEALw_wcB" target="_blank" rel="noopener noreferrer"> <strong>York University Accomodation - relatively cheap</strong></a></li>
                 <li><a href="https://www.booking.com/hotel/gb/thompsons-arms-cottages.html?ssne=Flaxton&ssne_untouched=Flaxton&highlighted_hotels=1708942&ss=Flaxton&dest_id=-2596292&dest_type=city&hp_avform=1&origin=hp&do_availability_check=1&label=English_United_Kingdom_EN_GB_19114759465-mRrCG3KqQexVWI3NTkblKQS640938724031%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-140566017145%3Alp9044889%3Ali%3Adec%3Adm%3Aag19114759465%3Acmp108539665&sid=718851496e005a2509286bc80c657b9c&aid=318615&lang=en-gb&sb=1&src_elem=sb&src=hotel&checkin=2025-08-23&checkout=2025-08-24&group_adults=2&no_rooms=1&group_children=0#map_closed" target="_blank" rel="noopener noreferrer">Thompsons Arms</a></li>
                 <li><a href="https://www.booking.com/hotel/gb/york-rose-b-amp-b.en-gb.html?aid=356980&label=gog235jc-1FCAMoUEILc2FuZC1odXR0b25ICVgDaFCIAQGYAQm4AQfIAQzYAQHoAQH4AQKIAgGoAgO4AuXgr7wGwAIB0gIkODNkODBjN2QtOTQ4OS00Y2E3LTkzYTYtMDI4MGVlYzc3YWE12AIF4AIB&sid=718851496e005a2509286bc80c657b9c&all_sr_blocks=472407304_147745869_2_1_0&checkin=2025-08-23&checkout=2025-08-24&dest_id=-2607069&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=3&highlighted_blocks=472407304_147745869_2_1_0&hpos=3&matching_block_id=472407304_147745869_2_1_0&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&sr_pri_blocks=472407304_147745869_2_1_0__9000&srepoch=1737224309&srpvid=45d980b8ff780539&type=total&ucfs=1&" target="_blank" rel="noopener noreferrer">York Rose B&B</a></li>
                 <li><a href="https://www.airbnb.co.uk/s/Sand-Hutton--United-Kingdom/homes?refinement_paths%5B%5D=%2Fhomes&flexible_trip_lengths%5B%5D=one_week&monthly_start_date=2025-02-01&monthly_length=3&monthly_end_date=2025-05-01&price_filter_input_type=0&channel=EXPLORE&query=Sand%20Hutton&place_id=ChIJZ6o_i4YreUgRNRfdzPenIfM&date_picker_type=calendar&checkin=2025-08-23&checkout=2025-08-24&adults=2&source=structured_search_input_header&search_type=user_map_move&search_mode=regular_search&price_filter_num_nights=1&ne_lat=54.084186438254456&ne_lng=-0.8864572050720767&sw_lat=53.971373039248974&sw_lng=-1.0309866491035677&zoom=11.820606689844833&zoom_level=11.820606689844833&search_by_map=true" target="_blank" rel="noopener noreferrer">Airbnb Listings</a></li>
                 <li><a href="https://www.sandburnhall.co.uk/" target="_blank" rel="noopener noreferrer">Sandburn Hall</a></li>
-                <li><a href = 'https://www.bellavistacamping.co.uk/' target="_blank" rel="noopener noreferrer"> Bella Vista Glamping Ibis York Centre</a></li>
+                <li><a href = 'https://www.bellavistacamping.co.uk/' target="_blank" rel="noopener noreferrer"> Bella Vista Glamping</a></li>
                 <li><a href = 'https://all.accor.com/hotel/6390/index.en.shtml' target="_blank" rel="noopener noreferrer">IBIS York Centre</a></li>
             </ul>
         </div>
